--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h1>Darko Mihajlovic</h1>
-<p class="maintext">I'm a product designer, focused on UX and Visual Design. Currently freelancing and working remotely out of Europe.
+<p class="maintext">I'm a product designer, currently freelancing and working remotely out of Europe.
 </p>
 
 <p class="smalltitle">CLIENTS:</p>
