--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <p class="maintext">I'm a product designer, currently freelancing and working remotely out of Europe.
 </p>
 
-<p class="smalltitle">CLIENTS:</p>
+<p class="smalltitle">WORK:</p>
 <p>Univision <br> Worm <br> LuminUltra <br> Uptrail <br> SpruceHealth <br> theGuardian <br></p>
 
 <div class="wrapper links" style="width:200px">
 <div>
     <p>
-      <a href="https://www.w3schools.com">
+      <a href="https://twitter.com/mihdarko" target="_blank">
         <img border="0" alt="Twitter" src="./twitter.svg" width="26" height="26">
       </a>
     </p>
@@ -27,16 +27,16 @@
 
 <div>
     <p>
-      <a href="https://www.w3schools.com">
-        <img border="0" alt="Twitter" src="./linkedin.svg" width="26" height="26">
+      <a href="https://www.linkedin.com/in/darko-mihajlovic/" target="_blank">
+        <img border="0" alt="LinkedIn" src="./linkedin.svg" width="26" height="26">
       </a>
     </p>
 </div>
 
 <div>
     <p>
-      <a href="https://www.w3schools.com">
-        <img border="0" alt="Twitter" src="./dribble.svg" width="26" height="26" >
+      <a href="https://dribbble.com/darkomihajlovic" target="_blank">
+        <img border="0" alt="Dribbble" src="./dribble.svg" width="26" height="26" >
       </a>
     </p>
 </div>
