--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
       </a>
     </p>
 </div>
+
+<div>
+    <p>
+      <a href="mailto:darkomihajlovic.design@gmail.com" target="_blank">
+        <img border="0" alt="Email" src="./email.svg" width="24" height="24" >
+      </a>
+    </p>
+</div>
+
 </div>
 
 
