--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </p>
 
 <p class="smalltitle">WORK:</p>
-<p>Univision <br> Worm <br> LuminUltra <br> Uptrail <br> SpruceHealth <br> theGuardian <br></p>
+<p class="work">Univision <br> Worm <br> LuminUltra <br> Uptrail <br> SpruceHealth <br> theGuardian <br></p>
 
 <div class="wrapper links" style="width:200px">
 <div>
@@ -44,7 +44,7 @@
 <div>
     <p>
       <a href="mailto:darkomihajlovic.design@gmail.com" target="_blank">
-        <img border="0" alt="Email" src="./email.svg" width="24" height="24" >
+        <img class="logo" border="0" alt="Email" src="./email.svg" width="24" height="24" >
       </a>
     </p>
 </div>
