--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Darko Mihajlovic</title>
 <link rel="stylesheet" type="text/css" href="./style.css"></link>
 <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
 
